--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -236,7 +236,14 @@
    "id": "9b83ecb7",
    "metadata": {},
    "source": [
-    "<center>a) Если сегодня не светит солнце, или сегодня сыро, то я не поеду на дачу.</center>\n",
+    "<center>a) Если сегодня не светит солнце, или сегодня сыро, то я не поеду на дачу.</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9d49ee2",
+   "metadata": {},
+   "source": [
     "<center>б) Если я поеду на дачу, то сегодня светит солнце, или сегодня не сыро.</center>"
    ]
   },
@@ -265,18 +272,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a437acb1",
+   "id": "243ed105",
    "metadata": {},
    "source": [
     "<center>a)</center>\n",
     "<center>изначальное утверждение: $\\exists$ студенты, сдающие на «отлично»: $\\forall$ факультете $\\wedge$ $\\forall$ курсе $\\wedge$ $\\forall$ экзамены.</center>\n",
-    "<center>обратное утверждение: $\\forall$ студенты НЕ сдают на «отлично»: $\\exists$ факультете $\\vee$ $\\exists$ курсе $\\vee$ $\\exists$ экзамены.</center>\n",
-    "\n",
-    "\n",
+    "<center>обратное утверждение: $\\forall$ студенты НЕ сдают на «отлично»: $\\exists$ факультете $\\vee$ $\\exists$ курсе $\\vee$ $\\exists$ экзамены.</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a437acb1",
+   "metadata": {},
+   "source": [
     "<center>б)</center>\n",
     "<center>изначальное утверждение: $\\forall$ самолёты на рейсе Вашингтон-Москва: сотрудник $\\geq$ 1 $\\wedge$ $\\forall$ пуговицы с микрофоном.</center>\n",
-    "<center>обратное утверждение: $\\exists$ самолёты на рейсе Вашингтон-Москва: сотрудник $<$ 1 $\\vee$ $\\exists$ пуговицы с микрофоном.</center>\n",
-    "\n"
+    "<center>обратное утверждение: $\\exists$ самолёты на рейсе Вашингтон-Москва: сотрудник $<$ 1 $\\vee$ $\\exists$ пуговицы с микрофоном.</center>"
    ]
   },
   {
@@ -328,10 +339,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b62331a",
+   "metadata": {},
+   "source": [
+    "### $$\\exists x\\in\\mathbb{R}\\,\\,\\,\\forall X\\in\\mathbb{R}:\\,\\,\\, X<x$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ef9e6b1",
    "metadata": {},
    "source": [
-    "### $$\\exists x\\in\\mathbb{R}\\,\\,\\,\\forall X\\in\\mathbb{R}:\\,\\,\\, X<x$$\n",
     "<center>выражение в словестном виде: для некого числа $x$, принадлежащего множеству рациональных чисел при любом значении числа $X$, принадлежащих множеству рациональных чисел, выполняется условие $X < x$.</center>\n",
     "<center>это противоположное выражение не является истинным</center>"
    ]
