--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -272,12 +272,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e66fa960",
+   "metadata": {},
+   "source": [
+    "<center>a)</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "243ed105",
    "metadata": {},
    "source": [
-    "<center>a)</center>\n",
-    "<center>изначальное утверждение: $\\exists$ студенты, сдающие на «отлично»: $\\forall$ факультете $\\wedge$ $\\forall$ курсе $\\wedge$ $\\forall$ экзамены.</center>\n",
-    "<center>обратное утверждение: $\\forall$ студенты НЕ сдают на «отлично»: $\\exists$ факультете $\\vee$ $\\exists$ курсе $\\vee$ $\\exists$ экзамены.</center>"
+    "<center>изначальное утверждение: (есть) $\\exists$ студенты, сдающие на «отлично»: (каждом) $\\forall$ факультете (каждом) $\\wedge$ $\\forall$ курсе $\\wedge$ (все) $\\forall$ экзамены.</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd3bd687",
+   "metadata": {},
+   "source": [
+    "<center>обратное утверждение: (абсолютно все) $\\forall$ студенты НЕ сдают на «отлично»: (на некотором) $\\exists$ факультете $\\vee$ (на некотором) $\\exists$ курсе $\\vee$ (какие-то) $\\exists$ экзамены.</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d24b0796",
+   "metadata": {},
+   "source": [
+    "<center>б)</center>"
    ]
   },
   {
@@ -285,9 +307,15 @@
    "id": "a437acb1",
    "metadata": {},
    "source": [
-    "<center>б)</center>\n",
-    "<center>изначальное утверждение: $\\forall$ самолёты на рейсе Вашингтон-Москва: сотрудник $\\geq$ 1 $\\wedge$ $\\forall$ пуговицы с микрофоном.</center>\n",
-    "<center>обратное утверждение: $\\exists$ самолёты на рейсе Вашингтон-Москва: сотрудник $<$ 1 $\\vee$ $\\exists$ пуговицы с микрофоном.</center>"
+    "<center>изначальное утверждение: (все) $\\forall$ самолёты на рейсе Вашингтон-Москва: сотрудник $\\geq$ 1 $\\wedge$ $\\forall$ пуговицы с микрофоном.</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "920ef3fc",
+   "metadata": {},
+   "source": [
+    "<center>обратное утверждение: (есть) $\\exists$ самолёты на рейсе Вашингтон-Москва: сотрудник $<$ 1 $\\vee$ $\\exists$ пуговицы с микрофоном.</center>"
    ]
   },
   {
@@ -334,7 +362,7 @@
    "metadata": {},
    "source": [
     "<center>выражение в словестном виде: для каждого числа $x$, принадлежащего множеству рациональных чисел, есть некое число $X$, принадлежащее множеству рациональных чисел, такое, что $X > x$</center>\n",
-    "<center>выражение верно, т.к. всегда найдётся рациональное число большее другого рационального числа. напишем противоположное выражение:</center>"
+    "<center>выражение истинно, т.к. всегда найдётся рациональное число больше другого рационального числа. напишем противоположное выражение:</center>"
    ]
   },
   {
@@ -445,6 +473,14 @@
     "\n",
     "<center>выражение ложно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то найдётся некое значение $\\varepsilon$, которое увеличит значение $y + \\varepsilon$ до $\\pi$, т.е. до возможного абсолютного минимума</center>\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d067f8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
