--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -283,7 +283,7 @@
    "id": "243ed105",
    "metadata": {},
    "source": [
-    "<center>изначальное утверждение: (есть) $\\exists$ студенты, сдающие на «отлично»: (каждом) $\\forall$ факультете (каждом) $\\wedge$ $\\forall$ курсе $\\wedge$ (все) $\\forall$ экзамены.</center>"
+    "<center>изначальное утверждение: (есть) $\\exists$ студенты, сдающие на «отлично»: (на каждом) $\\forall$ факультете (на каждом) $\\wedge$ $\\forall$ курсе $\\wedge$ (все) $\\forall$ экзамены.</center>"
    ]
   },
   {
