--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -315,7 +315,7 @@
    "id": "920ef3fc",
    "metadata": {},
    "source": [
-    "<center>обратное утверждение: (есть) $\\exists$ самолёты на рейсе Вашингтон-Москва: сотрудник $<$ 1 $\\vee$ $\\exists$ пуговицы с микрофоном.</center>"
+    "<center>обратное утверждение: (есть) $\\exists$ самолёты на рейсе Вашингтон-Москва: сотрудник < 1 $\\vee$ $\\exists$ пуговицы с микрофоном.</center>"
    ]
   },
   {
