--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -358,10 +358,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d17106ca",
+   "metadata": {},
+   "source": [
+    "<center>выражение в словестном виде: для каждого числа $x$, принадлежащего множеству рациональных чисел, есть некое число $X$, принадлежащее множеству рациональных чисел, такое, что $X > x$</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc9d93fa",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: для каждого числа $x$, принадлежащего множеству рациональных чисел, есть некое число $X$, принадлежащее множеству рациональных чисел, такое, что $X > x$</center>\n",
     "<center>выражение истинно, т.к. всегда найдётся рациональное число больше другого рационального числа. напишем противоположное выражение:</center>"
    ]
   },
@@ -375,10 +382,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8bbf14b3",
+   "metadata": {},
+   "source": [
+    "<center>выражение в словестном виде: для некого числа $x$, принадлежащего множеству рациональных чисел при любом значении числа $X$, принадлежащих множеству рациональных чисел, выполняется условие $X < x$.</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ef9e6b1",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: для некого числа $x$, принадлежащего множеству рациональных чисел при любом значении числа $X$, принадлежащих множеству рациональных чисел, выполняется условие $X < x$.</center>\n",
     "<center>это противоположное выражение не является истинным</center>"
    ]
   },
@@ -400,13 +414,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf3d928d",
+   "metadata": {},
+   "source": [
+    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\frac{\\pi}{2}$, есть некое число $\\varepsilon>0$, такое, что $\\sin y<\\sin(y+\\varepsilon)$</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34a728f6",
+   "metadata": {},
+   "source": [
+    "<center>выражение ложно, т.к. максимальным значением sin является $\\sin(\\frac{\\pi}{2}) = 1$ и $\\sin(y+\\varepsilon)$ не может быть больше $\\sin(\\frac{\\pi}{2})$ ни при каком значении $\\varepsilon$.</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9e8de128",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\frac{\\pi}{2}$, есть некое число $\\varepsilon>0$, такое, что $\\sin y<\\sin(y+\\varepsilon)$</center>\n",
-    "\n",
-    "<center>выражение ложно, т.к. максимальным значением sin является $\\sin(\\frac{\\pi}{2}) = 1$ и $\\sin(y+\\varepsilon)$ не может быть больше $\\sin(\\frac{\\pi}{2})$ ни при каком значении $\\varepsilon$.</center>\n",
-    "\n",
     "<center>напишем противоположное выражение:</center>"
    ]
   },
@@ -420,11 +446,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd6c2d1a",
+   "metadata": {},
+   "source": [
+    "<center>выражение в словестном виде: существует некий $y$, лежащий на отрезке от 0 до $\\frac{\\pi}{2}$, что для каждого числа число $\\varepsilon>0$, ыполняется условие $\\sin y>\\sin(y+\\varepsilon)$</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e9316a52",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: существует некий $y$, лежащий на отрезке от 0 до $\\frac{\\pi}{2}$, что для каждого числа число $\\varepsilon>0$, ыполняется условие $\\sin y>\\sin(y+\\varepsilon)$</center>\n",
-    "\n",
     "<center>выражение истинно, т.к. максимальным значением sin является $\\sin(\\frac{\\pi}{2}) = 1$, а соответственно sin от любого другого числа будет меньше 1</center>"
    ]
   },
@@ -446,13 +478,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e99dfc2",
+   "metadata": {},
+   "source": [
+    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\pi$ (исключительно), есть некое число $\\varepsilon>0$, такое, что $\\cos y>\\cos(y+\\varepsilon)$</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "678df160",
+   "metadata": {},
+   "source": [
+    "<center>выражение истинно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то всегда найдётся некое значение $\\varepsilon$, которое увеличит значение $y$ до $\\pi$, а соответственно и $\\cos(y+\\varepsilon)$ будет меньше, чем $\\cos(y)$</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab52ce03",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\pi$ (исключительно), есть некое число $\\varepsilon>0$, такое, что $\\cos y>\\cos(y+\\varepsilon)$</center>\n",
-    "\n",
-    "<center>выражение истинно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то всегда найдётся некое значение $\\varepsilon$, которое увеличит значение $y$ до $\\pi$, а соответственно и $\\cos(y+\\varepsilon)$ будет меньше, чем $\\cos(y)$</center>\n",
-    "\n",
     "<center>напишем противоположное выражение:</center>"
    ]
   },
@@ -466,21 +510,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e99570",
+   "id": "c94dbb85",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: есть некое число $y$, лежащее на отрезке от 0 до $\\pi$ (исключительно), что для каждого числа $\\varepsilon>0$, выполняется условие $\\cos y<\\cos(y+\\varepsilon)$</center>\n",
-    "\n",
-    "<center>выражение ложно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то найдётся некое значение $\\varepsilon$, которое увеличит значение $y + \\varepsilon$ до $\\pi$, т.е. до возможного абсолютного минимума</center>\n"
+    "<center>выражение в словестном виде: есть некое число $y$, лежащее на отрезке от 0 до $\\pi$ (исключительно), что для каждого числа $\\varepsilon>0$, выполняется условие $\\cos y<\\cos(y+\\varepsilon)$</center>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d067f8b",
+   "cell_type": "markdown",
+   "id": "83e99570",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<center>выражение ложно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то найдётся некое значение $\\varepsilon$, которое увеличит значение $y + \\varepsilon$ до $\\pi$, т.е. до возможного абсолютного минимума</center>"
+   ]
   }
  ],
  "metadata": {
