--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -358,10 +358,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d17106ca",
+   "id": "01d91ea7",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: для каждого числа $x$, принадлежащего множеству рациональных чисел, есть некое число $X$, принадлежащее множеству рациональных чисел, такое, что $X > x$</center>"
+    "<center>выражение в словестном виде: для каждого числа $x$, принадлежащего множеству рациональных чисел, есть некое число $X$, принадлежащее множеству рациональных чисел, такое, что $X > x$.</center>"
    ]
   },
   {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bbf14b3",
+   "id": "a97c096b",
    "metadata": {},
    "source": [
     "<center>выражение в словестном виде: для некого числа $x$, принадлежащего множеству рациональных чисел при любом значении числа $X$, принадлежащих множеству рациональных чисел, выполняется условие $X < x$.</center>"
@@ -393,7 +393,7 @@
    "id": "6ef9e6b1",
    "metadata": {},
    "source": [
-    "<center>это противоположное выражение не является истинным</center>"
+    "<center>это противоположное выражение не является истинным.</center>"
    ]
   },
   {
@@ -414,15 +414,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3d928d",
+   "id": "7646b348",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\frac{\\pi}{2}$, есть некое число $\\varepsilon>0$, такое, что $\\sin y<\\sin(y+\\varepsilon)$</center>"
+    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\frac{\\pi}{2}$, есть некое число $\\varepsilon>0$, такое, что $\\sin y<\\sin(y+\\varepsilon)$.</center>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "34a728f6",
+   "id": "86b7eb19",
    "metadata": {},
    "source": [
     "<center>выражение ложно, т.к. максимальным значением sin является $\\sin(\\frac{\\pi}{2}) = 1$ и $\\sin(y+\\varepsilon)$ не может быть больше $\\sin(\\frac{\\pi}{2})$ ни при каком значении $\\varepsilon$.</center>"
@@ -446,10 +446,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd6c2d1a",
+   "id": "01f06a19",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: существует некий $y$, лежащий на отрезке от 0 до $\\frac{\\pi}{2}$, что для каждого числа число $\\varepsilon>0$, ыполняется условие $\\sin y>\\sin(y+\\varepsilon)$</center>"
+    "<center>выражение в словестном виде: существует некий $y$, лежащий на отрезке от 0 до $\\frac{\\pi}{2}$, что для каждого числа число $\\varepsilon>0$, ыполняется условие $\\sin y>\\sin(y+\\varepsilon)$.</center>"
    ]
   },
   {
@@ -457,7 +457,7 @@
    "id": "e9316a52",
    "metadata": {},
    "source": [
-    "<center>выражение истинно, т.к. максимальным значением sin является $\\sin(\\frac{\\pi}{2}) = 1$, а соответственно sin от любого другого числа будет меньше 1</center>"
+    "<center>выражение истинно, т.к. максимальным значением sin является $\\sin(\\frac{\\pi}{2}) = 1$, а соответственно sin от любого другого числа будет меньше 1.</center>"
    ]
   },
   {
@@ -478,18 +478,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e99dfc2",
+   "id": "73c02219",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\pi$ (исключительно), есть некое число $\\varepsilon>0$, такое, что $\\cos y>\\cos(y+\\varepsilon)$</center>"
+    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\pi$ (исключительно), есть некое число $\\varepsilon>0$, такое, что $\\cos y>\\cos(y+\\varepsilon)$.</center>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "678df160",
+   "id": "eb9357dc",
    "metadata": {},
    "source": [
-    "<center>выражение истинно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то всегда найдётся некое значение $\\varepsilon$, которое увеличит значение $y$ до $\\pi$, а соответственно и $\\cos(y+\\varepsilon)$ будет меньше, чем $\\cos(y)$</center>"
+    "<center>выражение истинно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то всегда найдётся некое значение $\\varepsilon$, которое увеличит значение $y$ до $\\pi$, а соответственно и $\\cos(y+\\varepsilon)$ будет меньше, чем $\\cos(y)$.</center>"
    ]
   },
   {
@@ -510,10 +510,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c94dbb85",
+   "id": "ac648941",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: есть некое число $y$, лежащее на отрезке от 0 до $\\pi$ (исключительно), что для каждого числа $\\varepsilon>0$, выполняется условие $\\cos y<\\cos(y+\\varepsilon)$</center>"
+    "<center>выражение в словестном виде: есть некое число $y$, лежащее на отрезке от 0 до $\\pi$ (исключительно), что для каждого числа $\\varepsilon>0$, выполняется условие $\\cos y<\\cos(y+\\varepsilon)$.</center>"
    ]
   },
   {
@@ -521,7 +521,7 @@
    "id": "83e99570",
    "metadata": {},
    "source": [
-    "<center>выражение ложно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то найдётся некое значение $\\varepsilon$, которое увеличит значение $y + \\varepsilon$ до $\\pi$, т.е. до возможного абсолютного минимума</center>"
+    "<center>выражение ложно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то найдётся некое значение $\\varepsilon$, которое увеличит значение $y + \\varepsilon$ до $\\pi$, т.е. до возможного абсолютного минимума.</center>"
    ]
   }
  ],
