--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01d91ea7",
+   "id": "874b01a4",
    "metadata": {},
    "source": [
     "<center>выражение в словестном виде: для каждого числа $x$, принадлежащего множеству рациональных чисел, есть некое число $X$, принадлежащее множеству рациональных чисел, такое, что $X > x$.</center>"
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a97c096b",
+   "id": "be220773",
    "metadata": {},
    "source": [
     "<center>выражение в словестном виде: для некого числа $x$, принадлежащего множеству рациональных чисел при любом значении числа $X$, принадлежащих множеству рациональных чисел, выполняется условие $X < x$.</center>"
@@ -414,15 +414,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7646b348",
+   "id": "63d9c6eb",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\frac{\\pi}{2}$, есть некое число $\\varepsilon>0$, такое, что $\\sin y<\\sin(y+\\varepsilon)$.</center>"
+    "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\frac{\\pi}{2}$, есть некое число $\\varepsilon>0$, такое, что $\\sin y$ < $\\sin(y+\\varepsilon)$.</center>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "86b7eb19",
+   "id": "8f68ea25",
    "metadata": {},
    "source": [
     "<center>выражение ложно, т.к. максимальным значением sin является $\\sin(\\frac{\\pi}{2}) = 1$ и $\\sin(y+\\varepsilon)$ не может быть больше $\\sin(\\frac{\\pi}{2})$ ни при каком значении $\\varepsilon$.</center>"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01f06a19",
+   "id": "164b9193",
    "metadata": {},
    "source": [
     "<center>выражение в словестном виде: существует некий $y$, лежащий на отрезке от 0 до $\\frac{\\pi}{2}$, что для каждого числа число $\\varepsilon>0$, ыполняется условие $\\sin y>\\sin(y+\\varepsilon)$.</center>"
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c02219",
+   "id": "c8210d52",
    "metadata": {},
    "source": [
     "<center>выражение в словестном виде: для каждого числа $y$, лежащего на отрезке от 0 до $\\pi$ (исключительно), есть некое число $\\varepsilon>0$, такое, что $\\cos y>\\cos(y+\\varepsilon)$.</center>"
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9357dc",
+   "id": "f79d68bc",
    "metadata": {},
    "source": [
     "<center>выражение истинно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то всегда найдётся некое значение $\\varepsilon$, которое увеличит значение $y$ до $\\pi$, а соответственно и $\\cos(y+\\varepsilon)$ будет меньше, чем $\\cos(y)$.</center>"
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac648941",
+   "id": "f9b98135",
    "metadata": {},
    "source": [
     "<center>выражение в словестном виде: есть некое число $y$, лежащее на отрезке от 0 до $\\pi$ (исключительно), что для каждого числа $\\varepsilon>0$, выполняется условие $\\cos y<\\cos(y+\\varepsilon)$.</center>"
