--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -489,7 +489,7 @@
    "id": "f79d68bc",
    "metadata": {},
    "source": [
-    "<center>выражение истинно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то всегда найдётся некое значение $\\varepsilon$, которое увеличит значение $y$ до $\\pi$, а соответственно и $\\cos(y+\\varepsilon)$ будет меньше, чем $\\cos(y)$.</center>"
+    "<center>выражение истинно, т.к. минимальным значением cos является $\\cos(\\pi) = -1$, а т.к. $y$ в данном случае не может быть $\\pi$, то всегда найдётся некое значение $\\varepsilon$, которое увеличит значение $y + \\varepsilon$ до $\\pi$, а соответственно и $\\cos(y+\\varepsilon)$ будет меньше, чем $\\cos(y)$.</center>"
    ]
   },
   {
