--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -513,7 +513,7 @@
    "id": "f9b98135",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: есть некое число $y$, лежащее на отрезке от 0 до $\\pi$ (исключительно), что для каждого числа $\\varepsilon>0$, выполняется условие $\\cos y<\\cos(y+\\varepsilon)$.</center>"
+    "<center>выражение в словестном виде: есть некое число $y$, лежащее на отрезке от 0 до $\\pi$ (исключительно), что для каждого числа $\\varepsilon>0$, выполняется условие $\\cos y$ < $\\cos(y+\\varepsilon)$.</center>"
    ]
   },
   {
