--- a/Calculus_HW_1.ipynb
+++ b/Calculus_HW_1.ipynb
@@ -449,7 +449,7 @@
    "id": "164b9193",
    "metadata": {},
    "source": [
-    "<center>выражение в словестном виде: существует некий $y$, лежащий на отрезке от 0 до $\\frac{\\pi}{2}$, что для каждого числа число $\\varepsilon>0$, ыполняется условие $\\sin y>\\sin(y+\\varepsilon)$.</center>"
+    "<center>выражение в словестном виде: существует некий $y$, лежащий на отрезке от 0 до $\\frac{\\pi}{2}$, такой, что для каждого числа $\\varepsilon>0$, выполняется условие $\\sin y>\\sin(y+\\varepsilon)$.</center>"
    ]
   },
   {
