--- a/Calculus_HW_2.ipynb
+++ b/Calculus_HW_2.ipynb
@@ -794,7 +794,7 @@
    "id": "908250cf",
    "metadata": {},
    "source": [
-    "#### Ответ: как я понял, суть критерия сходимости последовательности Коши заключается в том, что по мере продвижения 'вправо' по элементам последовательности, расстояния между этими элементами на линии вещественных чисел - сужаются, а соответственно, у последовательности есть предел отличный от бесконечности. Последовательность, расмотренная в данном задании, пусть и не на каждом шаге, но сужается, и вырисовывается её предел - 0.5928376206979427. В качестве предела с гарантированной точностью $\\varepsilon=10^{-7}$ можно взять 24-й член последовательности."
+    "#### Ответ: как я понял, суть критерия сходимости последовательности Коши заключается в том, что по мере продвижения 'вправо' по элементам последовательности, расстояния между этими элементами на линии вещественных чисел - сужаются, а, соответственно, у последовательности есть предел отличный от бесконечности. Последовательность, расмотренная в данном задании, пусть и не на каждом шаге, но сужается, и вырисовывается её предел - 0.5928376206979427. В качестве предела с гарантированной точностью $\\varepsilon=10^{-7}$ можно взять 24-й член последовательности."
    ]
   },
   {
@@ -1053,7 +1053,7 @@
    "id": "adf4e5f4",
    "metadata": {},
    "source": [
-    "#### Как видно, несмотря на то, что расстрояние между элементами последовательности сужается, (а не растёт или остаётся неизменным, что является критерием расходимости Коши), последовательность продолжает рост в плюс бесконечность. Рассчёт миллиона элементов последовательности, показывает, что нет уверенности, что этот рост остановится. На этом мой текущий матапппарат исчерпан - жду правильного ответа :)"
+    "#### Как видно, несмотря на то, что расстрояния между элементами последовательности сужаются, (а не растут или остаются неизменным, что является критерием расходимости Коши), последовательность продолжает рост в плюс бесконечность. Рассчёт миллиона элементов последовательности, показывает, что нет уверенности, что этот рост остановится  - феномен, однако! На этом мой текущий матапппарат исчерпан - жду правильного ответа :)"
    ]
   },
   {
