--- a/Calculus_HW_2.ipynb
+++ b/Calculus_HW_2.ipynb
@@ -203,7 +203,7 @@
    "id": "07b04582",
    "metadata": {},
    "source": [
-    "### $$^*\\,\\,\\,\\,\\lim_{n\\to \\infty} \\Bigl(\\frac{1}{1\\cdot2}+\\frac{1}{2\\cdot3}+\\frac{1}{3\\cdot4}+...+\\frac{1}{(n-1)\\cdot n}\\Bigr)$$"
+    "### $$^*\\,\\,\\,\\,\\lim_{n\\to \\infty} \\Bigl(\\frac{1}{1\\cdot2}+\\frac{1}{2\\cdot3}+\\frac{1}{3\\cdot4}+...+\\frac{1}{(n+1)\\cdot n}\\Bigr)$$"
    ]
   },
   {
@@ -250,6 +250,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.5\n",
       "0.9090909090909091\n",
       "0.9900990099009898\n",
       "0.9990009990009997\n",
@@ -258,6 +259,7 @@
     }
    ],
    "source": [
+    "print(task_1_e_limit_search(1))\n",
     "print(task_1_e_limit_search(10))\n",
     "print(task_1_e_limit_search(100))\n",
     "print(task_1_e_limit_search(1000))\n",
