--- a/Calculus_HW_3.ipynb
+++ b/Calculus_HW_3.ipynb
@@ -143,11 +143,7 @@
    "id": "ca98ef5b",
    "metadata": {},
    "source": [
-    "### $$ = \\lim_{x\\to 7} \\frac{\\sqrt{x+2}-\\sqrt[3]{x+20}}{\\sqrt[4]{x+9}-2} \n",
-    "\\cdot \n",
-    "\\frac{\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2}}{\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2}}\n",
-    "\\cdot\n",
-    "\\frac{\\sqrt[4]{x+9}+2}{\\sqrt[4]{x+9}+2} = $$"
+    "### $$ = \\lim_{x\\to 7} \\frac{\\sqrt{x+2}-\\sqrt[3]{x+20}}{\\sqrt[4]{x+9}-2}\\cdot\\frac{\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2}}{\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2}}\\cdot\\frac{\\sqrt[4]{x+9}+2}{\\sqrt[4]{x+9}+2} = $$"
    ]
   },
   {
@@ -164,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c48d7259",
+   "id": "a2e73afc",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 7} \\frac{((x+2)^3-(x+20)^2)(\\sqrt[4]{x+9}+2)(\\sqrt{x+9}+4)}{((x+9)-16)(\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2})(\\sqrt{(x+2)^3}+(x+20))} = $$"
@@ -172,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e773fd0",
+   "id": "d470baa8",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 7} \\frac{(x-7)(x^2+12x+56)(\\sqrt[4]{x+9}+2)(\\sqrt{x+9}+4)}{(x-7)(\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2})(\\sqrt{(x+2)^3}+(x+20))} = $$"
@@ -180,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb85527",
+   "id": "df1a9db2",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 7} \\frac{(x^2+12x+56)(\\sqrt[4]{x+9}+2)(\\sqrt{x+9}+4)}{(\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2})(\\sqrt{(x+2)^3}+(x+20))} = $$"
@@ -188,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a078bdc0",
+   "id": "e968bd4a",
    "metadata": {},
    "source": [
     "заменяем x на 7"
@@ -196,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1b935bf",
+   "id": "8949f6d7",
    "metadata": {},
    "source": [
     "### $$ = \\frac{112}{27}$$"
@@ -220,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "052292ba",
+   "id": "49192d3a",
    "metadata": {},
    "source": [
     "### $$\\lim_{x\\to 0} \\frac{3x\\,\\mbox{tg}\\,4x}{1-\\cos4x} = \\lim_{x\\to 0} \\frac{3x\\,\\mbox{tg}\\,4x}{1-\\cos4x} \\cdot \\frac{4x}{4x} = $$"
@@ -228,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fefb97f",
+   "id": "f9157476",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 0} \\frac{3x4x}{1-\\cos4x} \\cdot \\lim_{x\\to 0} \\frac{\\,\\mbox{tg}\\,4x}{4x}  = \\lim_{x\\to 0} \\frac{12x^2}{2\\sin^2(\\frac{4x}{2})} \\cdot 1 =  $$"
@@ -236,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8418908f",
+   "id": "e2b340b8",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 0} \\frac{2x 2x 1.5}{\\sin(2x)\\sin(2x)} = 1.5 \\cdot \\lim_{x\\to 0} \\frac{2x}{\\sin(2x)} \\cdot \\lim_{x\\to 0} \\frac{2x}{\\sin(2x)} = $$"
@@ -244,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b4d6ba",
+   "id": "edb996bb",
    "metadata": {},
    "source": [
     "### $$ = 1.5 \\cdot 1 \\cdot 1 = 1.5$$"
@@ -253,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01d743f8",
+   "id": "e145d782",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -268,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b72e1708",
+   "id": "b6967fb5",
    "metadata": {},
    "source": [
     "### $$\\lim_{x\\to \\infty} \\Bigr(\\frac{4x}{4x+3}\\Bigl)^\\frac{5x^2}{7x-1} = \n",
@@ -278,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f10679fb",
+   "id": "fcf6b6b2",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to \\infty} \\Bigr(1+\\frac{(-3) \\cdot 1}{(-3)(-\\frac{4x}{3}+1)}\\Bigl)^\\frac{5x^2}{7x-1} = $$"
@@ -286,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e4dba2d",
+   "id": "9595a6dd",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to \\infty} \\Bigr(\\Bigr(\\Bigr(1+\\frac{1}{\\frac{-4x+3}{3}}\\Bigl)^\\frac{-4x+3}{3}\\Bigl)^\\frac{3}{-4x+3}\\Bigl)^\\frac{5x^2}{7x-1} = e^y$$"
@@ -294,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78dcac1c",
+   "id": "9a4fe11c",
    "metadata": {},
    "source": [
     "где"
@@ -302,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57a52c1b",
+   "id": "6bd2424f",
    "metadata": {},
    "source": [
     "### $$ y = \\lim_{x\\to \\infty}\\frac{3}{-4x+3}\\cdot\\frac{5x^2}{7x-1} = \\lim_{x\\to \\infty}\\frac{15x^2}{-28x^2+25x-3} = -\\frac{15}{28}$$"
@@ -706,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f9ad0e1",
+   "id": "cc5c689f",
    "metadata": {},
    "source": [
     "ответ: предел стремится к числу __e__"
@@ -715,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b88b0b1",
+   "id": "9f1da15c",
    "metadata": {},
    "outputs": [],
    "source": []
