--- a/Calculus_HW_3.ipynb
+++ b/Calculus_HW_3.ipynb
@@ -151,16 +151,12 @@
    "id": "cdf6f5d2",
    "metadata": {},
    "source": [
-    "### $$ = \\lim_{x\\to 7} \\frac{(\\sqrt{(x+2)^3}-(x+20))(\\sqrt[4]{x+9}+2)}{(\\sqrt{x+9}-4)(\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2})}\n",
-    "\\cdot\n",
-    "\\frac{\\sqrt{(x+2)^3}+(x+20)}{\\sqrt{(x+2)^3}+(x+20)}\n",
-    "\\cdot\n",
-    "\\frac{\\sqrt{x+9}+4}{\\sqrt{x+9}+4} = $$"
+    "### $$ = \\lim_{x\\to 7} \\frac{(\\sqrt{(x+2)^3}-(x+20))(\\sqrt[4]{x+9}+2)}{(\\sqrt{x+9}-4)(\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2})}\\cdot\\frac{\\sqrt{(x+2)^3}+(x+20)}{\\sqrt{(x+2)^3}+(x+20)}\\cdot\\frac{\\sqrt{x+9}+4}{\\sqrt{x+9}+4} = $$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a2e73afc",
+   "id": "0c9c2e54",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 7} \\frac{((x+2)^3-(x+20)^2)(\\sqrt[4]{x+9}+2)(\\sqrt{x+9}+4)}{((x+9)-16)(\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2})(\\sqrt{(x+2)^3}+(x+20))} = $$"
@@ -168,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d470baa8",
+   "id": "dd81f408",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 7} \\frac{(x-7)(x^2+12x+56)(\\sqrt[4]{x+9}+2)(\\sqrt{x+9}+4)}{(x-7)(\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2})(\\sqrt{(x+2)^3}+(x+20))} = $$"
@@ -176,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df1a9db2",
+   "id": "5acf9b06",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 7} \\frac{(x^2+12x+56)(\\sqrt[4]{x+9}+2)(\\sqrt{x+9}+4)}{(\\sqrt{(x+2)^2}+\\sqrt{x+2}\\sqrt[3]{x+20}+\\sqrt[3]{(x+20)^2})(\\sqrt{(x+2)^3}+(x+20))} = $$"
@@ -184,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e968bd4a",
+   "id": "a8ed2a68",
    "metadata": {},
    "source": [
     "заменяем x на 7"
@@ -192,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8949f6d7",
+   "id": "3a925de5",
    "metadata": {},
    "source": [
     "### $$ = \\frac{112}{27}$$"
@@ -216,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49192d3a",
+   "id": "13f1a56a",
    "metadata": {},
    "source": [
     "### $$\\lim_{x\\to 0} \\frac{3x\\,\\mbox{tg}\\,4x}{1-\\cos4x} = \\lim_{x\\to 0} \\frac{3x\\,\\mbox{tg}\\,4x}{1-\\cos4x} \\cdot \\frac{4x}{4x} = $$"
@@ -224,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9157476",
+   "id": "7cf7aa01",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 0} \\frac{3x4x}{1-\\cos4x} \\cdot \\lim_{x\\to 0} \\frac{\\,\\mbox{tg}\\,4x}{4x}  = \\lim_{x\\to 0} \\frac{12x^2}{2\\sin^2(\\frac{4x}{2})} \\cdot 1 =  $$"
@@ -232,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2b340b8",
+   "id": "0ce9052f",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to 0} \\frac{2x 2x 1.5}{\\sin(2x)\\sin(2x)} = 1.5 \\cdot \\lim_{x\\to 0} \\frac{2x}{\\sin(2x)} \\cdot \\lim_{x\\to 0} \\frac{2x}{\\sin(2x)} = $$"
@@ -240,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edb996bb",
+   "id": "a52b6503",
    "metadata": {},
    "source": [
     "### $$ = 1.5 \\cdot 1 \\cdot 1 = 1.5$$"
@@ -249,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e145d782",
+   "id": "f3c8b147",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -264,17 +260,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6967fb5",
+   "id": "0c65ef93",
    "metadata": {},
    "source": [
-    "### $$\\lim_{x\\to \\infty} \\Bigr(\\frac{4x}{4x+3}\\Bigl)^\\frac{5x^2}{7x-1} = \n",
-    "\\lim_{x\\to \\infty} \\Bigr(1+\\frac{4x}{4x+3}-1\\Bigl)^\\frac{5x^2}{7x-1} = \n",
-    "\\lim_{x\\to \\infty} \\Bigr(1+\\frac{4x-4x-3}{4x+3}\\Bigl)^\\frac{5x^2}{7x-1} = $$"
+    "### $$\\lim_{x\\to \\infty} \\Bigr(\\frac{4x}{4x+3}\\Bigl)^\\frac{5x^2}{7x-1} = \\lim_{x\\to \\infty} \\Bigr(1+\\frac{4x}{4x+3}-1\\Bigl)^\\frac{5x^2}{7x-1} = \\lim_{x\\to \\infty} \\Bigr(1+\\frac{4x-4x-3}{4x+3}\\Bigl)^\\frac{5x^2}{7x-1} = $$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fcf6b6b2",
+   "id": "1e822ecc",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to \\infty} \\Bigr(1+\\frac{(-3) \\cdot 1}{(-3)(-\\frac{4x}{3}+1)}\\Bigl)^\\frac{5x^2}{7x-1} = $$"
@@ -282,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9595a6dd",
+   "id": "8a300fda",
    "metadata": {},
    "source": [
     "### $$ = \\lim_{x\\to \\infty} \\Bigr(\\Bigr(\\Bigr(1+\\frac{1}{\\frac{-4x+3}{3}}\\Bigl)^\\frac{-4x+3}{3}\\Bigl)^\\frac{3}{-4x+3}\\Bigl)^\\frac{5x^2}{7x-1} = e^y$$"
@@ -290,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a4fe11c",
+   "id": "8ebc442b",
    "metadata": {},
    "source": [
     "где"
@@ -298,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bd2424f",
+   "id": "f8fb7c49",
    "metadata": {},
    "source": [
     "### $$ y = \\lim_{x\\to \\infty}\\frac{3}{-4x+3}\\cdot\\frac{5x^2}{7x-1} = \\lim_{x\\to \\infty}\\frac{15x^2}{-28x^2+25x-3} = -\\frac{15}{28}$$"
@@ -702,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc5c689f",
+   "id": "32216bde",
    "metadata": {},
    "source": [
     "ответ: предел стремится к числу __e__"
@@ -711,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f1da15c",
+   "id": "42fc170a",
    "metadata": {},
    "outputs": [],
    "source": []
