--- a/Calculus_HW_5.ipynb
+++ b/Calculus_HW_5.ipynb
@@ -2,46 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b3d14705",
-   "metadata": {},
-   "source": [
-    "# прошу проверить через пару дней, только приступил к решению!!!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4c35ca4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "249c0f5c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32bb5fad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a922b8c4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "d18eb15d",
    "metadata": {},
    "source": [
@@ -73,9 +33,383 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4651b12",
+   "metadata": {},
+   "source": [
+    "__1.__ Найти производную функции:\n",
+    "\n",
+    "### $$y=\\frac{1}{x}+\\frac{2}{x^2}-\\frac{5}{x^3}+\\sqrt x -\\sqrt[3]x+\\frac{3}{\\sqrt x}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06246122",
+   "metadata": {},
+   "source": [
+    "### $$y'=(\\frac{1}{x}+\\frac{2}{x^2}-\\frac{5}{x^3}+\\sqrt x -\\sqrt[3]x+\\frac{3}{\\sqrt x})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79e41dbd",
+   "metadata": {},
+   "source": [
+    "### $$=(\\frac{1}{x})'+(\\frac{2}{x^2})'-(\\frac{5}{x^3})'+(\\sqrt x)' -(\\sqrt[3]x)'+(\\frac{3}{\\sqrt x})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bcc210b",
+   "metadata": {},
+   "source": [
+    "### $$=(1 \\cdot x^{-1})'+(2  \\cdot x^{-2})'-(5  \\cdot x^{-3})'+(x^{\\frac{1}{2}})' -(x^{\\frac{1}{3}})'+(3 \\cdot x^{-\\frac{1}{2}})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7244c36f",
+   "metadata": {},
+   "source": [
+    "### $$=1 \\cdot (-1) \\cdot x^{-1-1} + 2 \\cdot (-2) \\cdot x^{-2-1} - 5 \\cdot (-3) \\cdot x^{-3-1} + \\frac{1}{2} \\cdot x^{\\frac{1}{2}-1} - \\frac{1}{3} \\cdot x^{\\frac{1}{3}-1} + 3 \\cdot (-\\frac{1}{2}) \\cdot x^{-\\frac{1}{2}-1}=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13c40ca5",
+   "metadata": {},
+   "source": [
+    "### $$=-x^{-2} - 4x^{-3} + 15x^{-4} + \\frac{1}{2}x^{-\\frac{1}{2}} - \\frac{1}{3} \\cdot x^{-\\frac{2}{3}} - \\frac{3}{2} x^{-\\frac{3}{2}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae39f133",
+   "metadata": {},
+   "source": [
+    "__2.__ Найти производную функции:\n",
+    "\n",
+    "### $$y=x \\cdot \\sqrt {1+x^2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c69c49df",
+   "metadata": {},
+   "source": [
+    "### $$y'=(x \\cdot \\sqrt {1+x^2})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6416482",
+   "metadata": {},
+   "source": [
+    "### $$=(x)' \\cdot \\sqrt {1+x^2} + x \\cdot (\\sqrt {1+x^2})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6c36b97",
+   "metadata": {},
+   "source": [
+    "### $$=1 \\cdot \\sqrt {1+x^2} + x \\cdot ((1+x^2)^{\\frac{1}{2}})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bcac737",
+   "metadata": {},
+   "source": [
+    "### $$=\\sqrt {1+x^2} + x \\cdot (\\frac{1}{2}(1+x^2)^{\\frac{1}{2}-1}) \\cdot (1+x^2)'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d5194c0",
+   "metadata": {},
+   "source": [
+    "### $$=\\sqrt {1+x^2} + \\frac{x}{2 \\sqrt {1+x^2}} \\cdot 2x= \\frac{2x^2 + 1}{\\sqrt {1+x^2}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acb19868",
+   "metadata": {},
+   "source": [
+    "__3.__ Найти производную функции:\n",
+    "\n",
+    "### $$y= \\frac{2x}{1-x^2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87630611",
+   "metadata": {},
+   "source": [
+    "### $$y'= (\\frac{2x}{1-x^2})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7898e83a",
+   "metadata": {},
+   "source": [
+    "### $$= \\frac{(2x)' \\cdot (1-x^2) - 2x \\cdot (1-x^2)'}{(1-x^2)^2}=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0455f053",
+   "metadata": {},
+   "source": [
+    "### $$= \\frac{2 \\cdot (1-x^2) - 2x \\cdot (0-2x)}{(1-x^2)^2}= \\frac{2x^2+2}{(1-x^2)^2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b64b986",
+   "metadata": {},
+   "source": [
+    "__4*.__ Найти производную функции:\n",
+    "\n",
+    "### $$y=\\sqrt{x+ \\sqrt{x+\\sqrt x}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9623f0d5",
+   "metadata": {},
+   "source": [
+    "### $$y'=(\\sqrt{x+ \\sqrt{x+\\sqrt x}})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07673efa",
+   "metadata": {},
+   "source": [
+    "### $$=((x+(x+(x)^{\\frac{1}{2}})^{\\frac{1}{2}})^{\\frac{1}{2}})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45b9abcb",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{2}(x+(x+(x)^{\\frac{1}{2}})^{\\frac{1}{2}})^{\\frac{1}{2}-1} \\cdot (x+(x+(x)^{\\frac{1}{2}})^{\\frac{1}{2}})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4baa129",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{2}(x+(x+(x)^{\\frac{1}{2}})^{\\frac{1}{2}})^{-\\frac{1}{2}} \\cdot ((x)' + ((x+(x)^{\\frac{1}{2}})^\\frac{1}{2})')=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3133e364",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{2 \\sqrt{x+\\sqrt{x+\\sqrt{x}}}} \\cdot (1 + \\frac{1}{2}(x+(x)^{\\frac{1}{2}})^{\\frac{1}{2}-1} \\cdot (x+(x)^{\\frac{1}{2}})')=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68d3b848",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{2 \\sqrt{x+\\sqrt{x+\\sqrt{x}}}} \\cdot (1 + \\frac{1}{2\\sqrt{x+\\sqrt{x}}} \\cdot (x+(x)^{\\frac{1}{2}})')=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1008d963",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{2 \\sqrt{x+\\sqrt{x+\\sqrt{x}}}} \\cdot (1 + \\frac{1}{2\\sqrt{x+\\sqrt{x}}} \\cdot ((x)'+(x^{\\frac{1}{2}})'))=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "070b9aca",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{2 \\sqrt{x+\\sqrt{x+\\sqrt{x}}}} \\cdot (1 + \\frac{1}{2\\sqrt{x+\\sqrt{x}}} \\cdot (1+\\frac{1}{2}x^{\\frac{1}{2}-1}))=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "776fc47d",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{2 \\sqrt{x+\\sqrt{x+\\sqrt{x}}}} \\cdot (1 + \\frac{1}{2\\sqrt{x+\\sqrt{x}}} \\cdot (1+\\frac{1}{2\\sqrt{x}}))$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace27f88",
+   "metadata": {},
+   "source": [
+    "__5.__ Найти производную функции:\n",
+    "\n",
+    "### $$y= \\ln(x+\\sqrt{x^2+1})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e50894a",
+   "metadata": {},
+   "source": [
+    "### $$y'= (\\ln(x+\\sqrt{x^2+1}))'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5fa713b",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{x+\\sqrt{x^2+1}} \\cdot (x+\\sqrt{x^2+1})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a9f3830",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{x+\\sqrt{x^2+1}} \\cdot ((x)'+ (\\sqrt{x^2+1})')=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82cacaba",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{x+\\sqrt{x^2+1}} \\cdot (1 + \\frac{1}{2\\sqrt{x^2+1}} \\cdot (x^2+1)')=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93b08c07",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{x+\\sqrt{x^2+1}} \\cdot (1 + \\frac{1}{2\\sqrt{x^2+1}} \\cdot 2x)=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d14a6978",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{\\sqrt{x^2+1}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bf2f1eb",
+   "metadata": {},
+   "source": [
+    "__6.__ Найти производную функции:\n",
+    "\n",
+    "### $$y=x \\cdot \\ln(x+\\sqrt{x^2+1})-\\sqrt{x^2+1}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b387f396",
+   "metadata": {},
+   "source": [
+    "### $$y'=(x \\cdot \\ln(x+\\sqrt{x^2+1})-\\sqrt{x^2+1})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23017c22",
+   "metadata": {},
+   "source": [
+    "### $$=(x \\cdot \\ln(x+\\sqrt{x^2+1}))'-(\\sqrt{x^2+1})'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d74111d7",
+   "metadata": {},
+   "source": [
+    "### $$=(x)' \\cdot \\ln(x+\\sqrt{x^2+1})+x \\cdot (\\ln(x+\\sqrt{x^2+1}))'- \\frac{1}{2\\sqrt{x^2+1}} \\cdot (x^2+1)'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87c1bba0",
+   "metadata": {},
+   "source": [
+    "### $$=1 \\cdot \\ln(x+\\sqrt{x^2+1})+x \\cdot \\frac{1}{x+\\sqrt{x^2+1}} \\cdot (x+\\sqrt{x^2+1})' - \\frac{1}{2\\sqrt{x^2+1}} \\cdot 2x=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbcd5e48",
+   "metadata": {},
+   "source": [
+    "### $$=\\ln(x+\\sqrt{x^2+1})+ \\frac{x}{x+\\sqrt{x^2+1}} \\cdot ((x)'+(\\sqrt{x^2+1})') - \\frac{x}{\\sqrt{x^2+1}}=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b4de81a",
+   "metadata": {},
+   "source": [
+    "### $$=\\ln(x+\\sqrt{x^2+1})+ \\frac{x}{x+\\sqrt{x^2+1}} \\cdot (1+\\frac{1}{2\\sqrt{x^2+1}} \\cdot (x^2+1)') - \\frac{x}{\\sqrt{x^2+1}}=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39c42815",
+   "metadata": {},
+   "source": [
+    "### $$=\\ln(x+\\sqrt{x^2+1})+ \\frac{x}{x+\\sqrt{x^2+1}} \\cdot (1+\\frac{1}{2\\sqrt{x^2+1}} \\cdot 2x) - \\frac{x}{\\sqrt{x^2+1}}=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b4bf7b6",
+   "metadata": {},
+   "source": [
+    "### $$=\\ln(x+\\sqrt{x^2+1})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1544ec8",
+   "metadata": {},
+   "source": [
+    "__7*.__ Найти производную функции:\n",
+    "\n",
+    "### $$y=\\arcsin (\\sin x)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0cdda1d",
+   "metadata": {},
+   "source": [
+    "### $$y'=(\\arcsin (\\sin x))'=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e26da6d0",
+   "metadata": {},
+   "source": [
+    "### $$=\\frac{1}{\\sqrt{1-\\sin^2 x}} \\cdot (\\sin x)'=\\frac{\\cos x}{\\sqrt{1-\\sin^2 x}}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a66b97c0",
+   "id": "ad201413",
    "metadata": {},
    "outputs": [],
    "source": []
