--- a/Calculus_HW_6.ipynb
+++ b/Calculus_HW_6.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3685f30",
+   "id": "cd426181",
    "metadata": {},
    "source": [
     "### $$\\frac{1}{1+(\\frac{y}{x})^2}\\cdot(\\frac{y}{x})'=\\frac{1}{\\sqrt{x^2+y^2}}\\cdot(\\sqrt{x^2+y^2})'$$"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25c2e686",
+   "id": "b8dd9d2a",
    "metadata": {},
    "source": [
     "### $$\\frac{1}{1+(\\frac{y}{x})^2}\\cdot\\frac{y'x-y}{x^2}=\\frac{1}{\\sqrt{x^2+y^2}}\\cdot\\frac{1}{2\\sqrt{x^2+y^2}}\\cdot(x^2+y^2)'$$"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f41bcf5",
+   "id": "8741a3a7",
    "metadata": {},
    "source": [
     "### $$\\frac{y'x-y}{x^2+y^2}=\\frac{1}{2(x^2+y^2)}\\cdot(2x+2y\\cdot y')$$"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e879f7f",
+   "id": "f758f5f5",
    "metadata": {},
    "source": [
     "### $$\\frac{y'x-y}{x^2+y^2}=\\frac{2x+2yy'}{2(x^2+y^2)}$$"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c81852",
+   "id": "15288ae7",
    "metadata": {},
    "source": [
     "### $$y'x-y=x+yy'$$"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17573640",
+   "id": "5587927d",
    "metadata": {},
    "source": [
     "### $$y'(x-y)=x+y$$"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d34086d",
+   "id": "1918c69f",
    "metadata": {},
    "source": [
     "### $$y'=\\frac{x+y}{x-y}$$"
@@ -113,10 +113,7 @@
    "source": [
     "__2.__ Найти производную $y'_{x}$ функции:\n",
     "\n",
-    "### \\begin{cases}\n",
-    "   y=\\frac{t^2}{t-1}, \\\\\n",
-    "   x=\\frac{t}{t^2-1} \n",
-    " \\end{cases}"
+    "### \\begin{cases} y=\\frac{t^2}{t-1}, \\\\x=\\frac{t}{t^2-1} \\end{cases}"
    ]
   },
   {
@@ -319,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06b4316b",
+   "id": "efa85527",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot ((\\ln{(2-x^2)^3})'+(\\ln{(x-1)^2})'+(\\ln{(2x^3-3x)^{-1}})'+(\\ln{e^x})')=$$"
@@ -327,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "073cbf61",
+   "id": "18e42f06",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3}{2-x^2}\\cdot(2-x^2)'+\\frac{2}{x-1}\\cdot(x-1)'+\\frac{-1}{2x^3-3x}\\cdot(2x^3-3x)'+(x\\ln{e})')=$$"
@@ -335,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "619073c2",
+   "id": "c76e6282",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{3\\cdot(-2x)}{2-x^2}+\\frac{2\\cdot(1)}{x-1}+\\frac{-1\\cdot(6x^2-3)}{2x^3-3x}+(x)'\\ln{e}+x(\\ln{e})')=$$"
@@ -343,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac68e95b",
+   "id": "2a1aa6c3",
    "metadata": {},
    "source": [
     "### $$=\\frac{(2-x^2)^3\\cdot(x-1)^2}{(2x^3-3x)\\cdot e^x} \\cdot (\\frac{-6x}{2-x^2}+\\frac{2}{x-1}+\\frac{3-6x^2}{2x^3-3x}+1+\\frac{x}{e})$$"
@@ -351,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "699a4b6d",
+   "id": "c123c6ac",
    "metadata": {},
    "source": [
     "__7.__ Найти длину $𝑥$ и ширину $𝑦$ прямоугольника при заданном периметре $𝑃=144$ cм, при которых данный прямоугольник имеет наибольшую площадь $𝑆$."
@@ -359,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "624af819",
+   "id": "c257c1d0",
    "metadata": {},
    "source": [
     "### $$S=x\\cdot y$$"
@@ -367,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f54932c5",
+   "id": "a8957fe2",
    "metadata": {},
    "source": [
     "### $$P=2\\cdot (x+y)=144$$"
@@ -375,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf366b1",
+   "id": "514893f8",
    "metadata": {},
    "source": [
     "соответственно"
@@ -383,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2eae9a1",
+   "id": "4abab648",
    "metadata": {},
    "source": [
     "### \\begin{cases}\n",
@@ -394,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e416018",
+   "id": "8548c532",
    "metadata": {},
    "source": [
     "тогда"
@@ -402,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa876266",
+   "id": "e960c86e",
    "metadata": {},
    "source": [
     "### $$S=x\\cdot (72-x)=-x^2+72x$$"
@@ -410,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75fe4328",
+   "id": "63946640",
    "metadata": {},
    "source": [
     "возьмём производную от S"
@@ -418,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecf6bdaf",
+   "id": "f394cb9e",
    "metadata": {},
    "source": [
     "### $$S'=(-x^2+72x)'=-2x+72$$"
@@ -426,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4addac1",
+   "id": "59036807",
    "metadata": {},
    "source": [
     "приравняем производную к нулю и найдём экстремум"
@@ -434,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "377ee26c",
+   "id": "2743b8bb",
    "metadata": {},
    "source": [
     "### $$-2x+72=0$$"
@@ -442,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e7680cb",
+   "id": "8faf66a8",
    "metadata": {},
    "source": [
     "### $$x=36$$"
@@ -450,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f609a5f",
+   "id": "82817f14",
    "metadata": {},
    "source": [
     "тогда"
@@ -458,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdaab691",
+   "id": "a34dc0a1",
    "metadata": {},
    "source": [
     "### $$y=72-x=72-36=36$$"
@@ -466,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab5787c",
+   "id": "e54b7917",
    "metadata": {},
    "source": [
     "#### ответ: при x и y = 36 площадь прямоугольника с периметром = 144 является максимальной"
@@ -475,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19a41fd2",
+   "id": "b14b16ff",
    "metadata": {},
    "outputs": [],
    "source": []
